Add squared features and PCA component visualization

--- a/alex_eda.ipynb
+++ b/alex_eda.ipynb
@@ -199,16 +199,25 @@
     "        print('standard deviation:', encoder.scale_)\n",
     "    return X, encoder\n",
     "\n",
+    "numerical_features = ['price_float', 'sq_price', 'brand_count', 'sq_brand_count', 'top_brand']\n",
+    "standardize_cols = [0, 1, 2, 3]\n",
+    "\n",
     "def get_feat_matrix(data, encoders=None):\n",
     "    if not encoders:\n",
     "        encoders = [None, None, None, None]\n",
-    "    X1 = data[['price_float', 'brand_count', 'top_brand']].to_numpy()\n",
+    "    X1 = data[numerical_features].to_numpy()\n",
     "    X2, encoders[0] = onehot_encode(data, 'brand', encoder=encoders[0])\n",
     "    X3, encoders[1] = extract_words(data, 'title', encoder=encoders[1], output=False)\n",
     "    X4, encoders[2] = extract_words(data, 'description_str', 500, encoder=encoders[2], output=False)\n",
     "    X = np.hstack([X1, X2, X3, X4])\n",
-    "    X, encoders[3] = standardize(X, [0, 1], encoder=encoders[3], output=False)\n",
+    "    X, encoders[3] = standardize(X, standardize_cols, encoder=encoders[3], output=False)\n",
     "    return X, encoders\n",
+    "\n",
+    "def get_feature_names(encoders):\n",
+    "    features = np.append(numerical_features, encoders[0].get_feature_names())\n",
+    "    features = np.append(features, np.char.add('title_', encoders[1].get_feature_names()))\n",
+    "    features = np.append(features, np.char.add('descr_', encoders[2].get_feature_names()))\n",
+    "    return features\n",
     "\n",
     "def train_test_split(data, label):\n",
     "    data_train, data_test, y_train, y_test = \\\n",
@@ -374,7 +383,9 @@
    "outputs": [],
    "source": [
     "transform_col(metadata_with_ratings, np.log, 'rank_float', 'log_rank')\n",
-    "transform_col(metadata_with_ratings, np.sqrt, 'rank_float', 'sqrt_rank')"
+    "transform_col(metadata_with_ratings, np.sqrt, 'rank_float', 'sqrt_rank')\n",
+    "transform_col(metadata_with_ratings, lambda x: x * x, 'price_float', 'sq_price')\n",
+    "transform_col(metadata_with_ratings, lambda x: x * x, 'brand_count', 'sq_brand_count')"
    ]
   },
   {
@@ -507,8 +518,8 @@
     "display(brand_counts[:10])\n",
     "display(brand_counts.describe())\n",
     "\n",
-    "brand_counts_filtered = brand_counts_filtered[brand_counts_filtered > 10]\n",
-    "fig = plt.figure(figsize=(12, 4))\n",
+    "brand_counts_filtered = brand_counts[brand_counts > 10]\n",
+    "plt.figure(figsize=(12, 4))\n",
     "plt.plot(np.arange(len(brand_counts_filtered)), brand_counts_filtered)\n",
     "plt.ylabel('frequency')\n",
     "plt.title('Frequency of occurence for brands, from most to least common')"
@@ -589,6 +600,7 @@
    "outputs": [],
    "source": [
     "X, encoders = get_feat_matrix(metadata_available)\n",
+    "feats = get_feature_names(encoders)\n",
     "X.shape"
    ]
   },
@@ -613,6 +625,47 @@
     "data_with_pca = pd.concat([metadata_available.reset_index(drop=True),\n",
     "                           components_df.reset_index(drop=True)], axis=1)\n",
     "data_with_pca.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v1 = pca.inverse_transform(np.array([1, 0]))\n",
+    "v2 = pca.inverse_transform(np.array([0, 1]))\n",
+    "x = np.arange(len(v1))\n",
+    "plt.figure(figsize=(12, 4))\n",
+    "plt.plot(x, v1)\n",
+    "plt.plot(x, v2)\n",
+    "plt.legend(['component 1', 'component 2'])\n",
+    "plt.xlabel('index of feature')\n",
+    "plt.ylabel('feature coefficient of component')\n",
+    "plt.title('PCA top two components');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 5\n",
+    "top_v1 = np.argsort(-np.abs(v1))[:n]\n",
+    "top_v2 = np.argsort(-np.abs(v2))[:n]\n",
+    "print('top features for component 1:', feats[top_v1])\n",
+    "print('top features for component 2:', feats[top_v2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.arange(X.shape[0])\n",
+    "plt.plot(x)"
    ]
   },
   {
@@ -742,6 +795,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 5\n",
+    "feats = get_feature_names(encoders)\n",
+    "top_coefs = np.argsort(-np.abs(model.coef_))[:n]\n",
+    "print('top features for Ridge model:', feats[top_coefs])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -789,7 +854,7 @@
    "source": [
     "# Setting n_estimators to be greater increases r^2 slightly but takes much longer, so I just went with\n",
     "# the default. Set n_jobs to make it faster.\n",
-    "model = train_model(X_train, X_test, y_train, y_test, RandomForestRegressor(max_depth=25, n_jobs=4))"
+    "model = train_model(X_train, X_test, y_train, y_test, RandomForestRegressor(max_depth=27, n_jobs=4))"
    ]
   },
   {
@@ -806,7 +871,16 @@
    "outputs": [],
    "source": [
     "model = train_model(X_train, X_test, y_train, y_test,\n",
-    "                    GradientBoostingRegressor(n_estimators=200, max_depth=5, min_samples_leaf=3))"
+    "                    GradientBoostingRegressor(n_estimators=200, max_depth=8, min_samples_leaf=3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!say 'your program has finished'"
    ]
   },
   {
