Rename model variables

--- a/Data200_ProjectWriteup.ipynb
+++ b/Data200_ProjectWriteup.ipynb
@@ -86,6 +86,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The square root of the sales rank was used as the label, because the distribution of the sales rank is more symmetric after this transformation than originally or when transformed with a logarithmic function, so we believed it would be easier for a linear model to predict.\n",
+    "\n",
+    "#### Modeling\n",
+    "\n",
+    "The above features\n",
+    "\n",
+    "- Ridge Regression: the `sklearn` class `RidgeCV` was used to perform $l_2$ regularized linear regression.\n",
+    "    - "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Summary of results:\n",
     "\n",
     "### Missing prices:\n",
