--- a/alex_eda.ipynb
+++ b/alex_eda.ipynb
@@ -782,7 +782,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = train_ridge(X_train, X_test, y_train, y_test)"
+    "model_ridge = train_ridge(X_train, X_test, y_train, y_test)"
    ]
   },
   {
@@ -791,7 +791,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.round(model.coef_ * 10).astype(int)"
+    "np.round(model_ridge.coef_ * 10).astype(int)"
    ]
   },
   {
@@ -802,7 +802,7 @@
    "source": [
     "n = 5\n",
     "feats = get_feature_names(encoders)\n",
-    "top_coefs = np.argsort(-np.abs(model.coef_))[:n]\n",
+    "top_coefs = np.argsort(-np.abs(model_ridge.coef_))[:n]\n",
     "print('top features for Ridge model:', feats[top_coefs])"
    ]
   },
@@ -819,7 +819,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = train_model(X_train, X_test, y_train, y_test, LassoCV(tol=0.1))"
+    "model_lasso = train_model(X_train, X_test, y_train, y_test, LassoCV(tol=0.1))"
    ]
   },
   {
@@ -836,7 +836,7 @@
    "outputs": [],
    "source": [
     "# May take several minutes to train.\n",
-    "model = train_model(X_train, X_test, y_train, y_test, SVR(C=250))"
+    "model_svm = train_model(X_train, X_test, y_train, y_test, SVR(C=250))"
    ]
   },
   {
@@ -854,7 +854,7 @@
    "source": [
     "# Setting n_estimators to be greater increases r^2 slightly but takes much longer, so I just went with\n",
     "# the default. Set n_jobs to make it faster.\n",
-    "model = train_model(X_train, X_test, y_train, y_test, RandomForestRegressor(max_depth=27, n_jobs=4))"
+    "model_rf = train_model(X_train, X_test, y_train, y_test, RandomForestRegressor(max_depth=27, n_jobs=4))"
    ]
   },
   {
@@ -870,17 +870,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = train_model(X_train, X_test, y_train, y_test,\n",
+    "model_gb = train_model(X_train, X_test, y_train, y_test,\n",
     "                    GradientBoostingRegressor(n_estimators=200, max_depth=8, min_samples_leaf=3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!say 'your program has finished'"
    ]
   },
   {
@@ -896,7 +887,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = train_model(X_train, X_test, y_train, y_test, AdaBoostRegressor())"
+    "model_ab = train_model(X_train, X_test, y_train, y_test, AdaBoostRegressor())"
    ]
   },
   {
@@ -912,6 +903,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = model_rf\n",
+    "\n",
     "describe_feat(metadata_available, label, as_int=True)"
    ]
   },
@@ -956,7 +949,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoders[0].get_feature_names()"
+    "!say 'your program has finished'"
    ]
   },
   {
