adding references; updating features included in model; reformatting

--- a/Data200_ProjectWriteup.ipynb
+++ b/Data200_ProjectWriteup.ipynb
@@ -29,7 +29,7 @@
     "How can the metadata of Amazon products for a given category be used to predict a new product's sales rank in that category?\n",
     "\n",
     "## Literature Review\n",
-    "While we have not found this specific research question answered in existing literature, other projects use similar datasets to make sales-related predictions. A blog AIReview `https://www.aihello.com/resources/blog/2020/04/13/predicting-amazon-sales-using-deep-learning/` used deep learning to predict a product's sales, given the product's sales rank. Because they focused on top sellers and top seller categories, they were not able to make predictions for less high-selling categories. Numerous academic papers have researched sales predictions at Amazon. One paper by Singh et al. titled 'Sales Forecast for Amazon Sales with Time Series Modeling' uses neural networks to forecast future sales at Amazon using historical sales data. These predictions were not category-specific. This project adds to the field by showing how you can predict a product's sales rank within its own category using the metadata for a product, specifically using many features that the vendor has control over [citation: https://ieeexplore.ieee.org/document/9071463].  \n"
+    "While we have not found this specific research question answered in existing literature, other projects use similar datasets to make sales-related predictions. A blog AIHello used deep learning to predict a product's sales, given the product's sales rank (AIHello, 2019). Because they focused on top sellers and top seller categories, they were not able to make predictions for less high-selling categories. Numerous academic papers have researched sales predictions at Amazon. One paper by Singh et al. titled 'Sales Forecast for Amazon Sales with Time Series Modeling' uses neural networks to forecast future sales at Amazon using historical sales data. These predictions were not category-specific. This project adds to the field by showing how you can predict a product's sales rank within its own category using the metadata for a product, specifically using many features that the vendor has control over (Singh, 2020).  \n"
    ]
   },
   {
@@ -40,7 +40,7 @@
     "## Methodolgy\n",
     "\n",
     "### Description of the data:\n",
-    "This report studies two datasets. The reviews datasets and the metadata dataset. This study is on three categories of products on Amazon: Musical Instruments, Softwares and Beauty. The attributes of the metadata dataset along with a short description for each attribute is provided below:\n",
+    "This report studies two datasets from Amazon sales. The reviews datasets and the metadata dataset. This study is on three categories of products on Amazon: Musical Instruments, Softwares and Beauty. The attributes of the metadata dataset along with a short description for each attribute is provided below:\n",
     "- `asin` - ID of the product, e.g. 0000031852\n",
     "- `title` - name of the product\n",
     "- `feature` - bullet-point format features of the product\n",
@@ -70,39 +70,8 @@
     "\n",
     "For the reviews dataset, we are specifically looking at the 5-core reviews. A k-core review dataset is a suset of the entire reviews dataset in which all users and items have at least 5 reviews. This dataset is smaller and less expensive on the computer memory.\n",
     "\n",
-    "### Description of methods:\n",
-    "#### Feature Engineering\n",
-    "- One Hot Encoding: We chose to use a one hot encoding of the descriptions because... \n",
-    "- Price: Price is used as a feature in our model. The vendor can set the price of a product, and the price will affect a buyer's willingness to pay for the product.\n",
-    "- Price$^2$: Price squared is used as a feature in our model. Having the price squared will weight higher-priced items more heavily, which could negatively affect sales-rank. \n",
-    "- Brand Counts: This feature represents the number of total products of the same brand in the dataset. This could be a proxy for brand recognition, but also for products that are more ubiquitous. \n",
-    "- Brand$^2$: Brand squared is used as a feature in our model to highlight more ubiquitous brands. \n",
-    "\n",
-    "By squaring the price and brand count, we are allowing the model to train on a non-linear dataset. \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The square root of the sales rank was used as the label, because the distribution of the sales rank is more symmetric after this transformation than originally or when transformed with a logarithmic function, so we believed it would be easier for a linear model to predict.\n",
-    "\n",
-    "#### Modeling\n",
-    "\n",
-    "The above features\n",
-    "\n",
-    "- Ridge Regression: the `sklearn` class `RidgeCV` was used to perform $l_2$ regularized linear regression.\n",
-    "    - "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Summary of results:\n",
-    "\n",
-    "### Missing prices:\n",
+    "### Exploratory Data Analysis\n",
+    "#### Missing prices:\n",
     "The metadata dataset for the Software category has several products with missing prices. This initially came as a surprise and is also concerning as price is an important feature in our model. About 75% of the products were missing prices. \n",
     "It was found that most of these were old products that were once sold on Amazon but were now replaced by their better/improved versions. The image below lists one such product. Notice, how the product landing page says **Currently Unavailable**.\n",
     "\n",
@@ -134,6 +103,27 @@
     "\n",
     "It seems the dip is largely observed due to the reviews by unverified users. This sheds some light on the seriousness of reviews by unverfied users. However, one can also argue that a reviewr reaches a certain level of saturation in praising a product at 4.0 rating. One should also note that a lot of reviews are bound to have spelling mistakes which would not be recognized by VADER.\n",
     "\n",
+    "\n",
+    "### Description of methods:\n",
+    "#### Feature Engineering\n",
+    "The following features are included in our model:\n",
+    "- Price: Price is used as a feature in our model. The vendor can set the price of a product, and the price will affect a buyer's willingness to pay for the product.\n",
+    "- Price$^2$: Price squared is used as a feature in our model. Having the price squared will weight higher-priced items more heavily, which could negatively affect sales-rank. \n",
+    "- Brand Counts: This feature represents the number of total products of the same brand in the dataset. This could be a proxy for brand recognition, but also for products that are more ubiquitous. \n",
+    "- Brand$^2$: Brand squared is used as a feature in our model to highlight more ubiquitous brands. \n",
+    "- Whether the brand is considered a _top brand_: if the brand appears more than 20 times in the test set.\n",
+    "- Top 100 bag of words included in the title\n",
+    "- Top 500 bag of words included in the descriptions\n",
+    "- One hot encoding of brand\n",
+    "By squaring the price and brand count, we are allowing the model to train on a non-linear dataset. Furthermore, we standardize all numerical features included in our model (brand count, brand count squared, price, and price squared.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary of results:\n",
     "\n"
    ]
   },
@@ -159,6 +149,15 @@
    "source": [
     "## Surprises and future work:\n",
     "Describe any surprising discoveries that you made and future work."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Works Cited:\n",
+    "- B. Singh, P. Kumar, N. Sharma and K. P. Sharma, 'Sales Forecast for Amazon Sales with Time Series Modeling,' 2020 First International Conference on Power, Control and Computing Technologies (ICPC2T), 2020, pp. 38-43, doi: 10.1109/ICPC2T48082.2020.9071463.\n",
+    "- AIHello, 'Predicting Amazon sales using Deep Learning,' 2019  AIHello.com, Retrieved from: https://www.aihello.com/resources/blog/2020/04/13/predicting-amazon-sales-using-deep-learning/."
    ]
   },
   {
