surprises + future work

--- a/Data200_ProjectWriteup.ipynb
+++ b/Data200_ProjectWriteup.ipynb
@@ -148,7 +148,9 @@
    "metadata": {},
    "source": [
     "## Surprises and future work:\n",
-    "Describe any surprising discoveries that you made and future work."
+    "The following are a some of the things that surprised us while working on this project:\n",
+    "- Missing Data: A lot of the data had missing categories or required a lot of cleaning. Sales rank, for example, was not given to us as an integer but rather a long string that included the specific category that it was a part of. Price, a feature that one would expect for every product, was missing for many of the products. Working with this real-world data, we saw how much cleaning was needed to get the data into a workable form to build a model with.\n",
+    "- Predicting valuable information: After choosing which dataset to work on, we were very torn what we wanted to predict: whether we wanted to focus on sales rank, the number of stars, recommending similar products, or something else.\n"
    ]
   },
   {
