--- a/alex_eda.ipynb
+++ b/alex_eda.ipynb
@@ -905,7 +905,7 @@
    "source": [
     "model = model_rf\n",
     "\n",
-    "describe_feat(metadata_available, label, as_int=True)"
+    "describe_feat(metadata_available, label, as_int=False)"
    ]
   },
   {
@@ -917,10 +917,11 @@
     "y_train_pred = model.predict(X_train)\n",
     "y_test_pred = model.predict(X_test)\n",
     "for i in range(10):\n",
-    "    print(f'{y_train.iloc[i]:7.0f}, {y_train_pred[i]:7.0f}')\n",
+    "    print(f'{y_train.iloc[i]:7.0f}, {y_train_pred[i]:7.0f}; {metadata_available.iloc[i][\"title\"]}')\n",
     "print()\n",
     "for i in range(10):\n",
-    "    print(f'{y_test.iloc[i]:7.0f}, {y_test_pred[i]:7.0f}')"
+    "    print(f'{y_test.iloc[i]:7.0f}, {y_test_pred[i]:7.0f}; '\n",
+    "          f'{metadata_available.iloc[X_train.shape[0] + i][\"title\"]}')"
    ]
   },
   {
@@ -930,7 +931,9 @@
    "outputs": [],
    "source": [
     "residuals = (y_train_pred - y_train) / np.abs(y_train)\n",
-    "sns.histplot(residuals[residuals < 6])"
+    "sns.histplot(residuals[residuals < 6])\n",
+    "plt.xlabel('proprotional residuals of sqrt rank')\n",
+    "plt.title('Distribution of porportional residuals of Random Forest')"
    ]
   },
   {
@@ -940,7 +943,9 @@
    "outputs": [],
    "source": [
     "residuals = (y_test_pred - y_test) / np.abs(y_test)\n",
-    "sns.histplot(residuals[residuals < 6])"
+    "sns.histplot(residuals[residuals < 6])\n",
+    "plt.xlabel('proprotional residuals of sqrt rank')\n",
+    "plt.title('Distribution of porportional residuals of Random Forest')"
    ]
   },
   {
